Fix error message display issue Removed the else statement from the "myLibrary.length >= maximumLibraryCapacity" if statement. Also adjusted button sizes, grid row sizing to reduce expanding the space around the buttons and to fix the error message alignments relative to the buttons.

--- a/Assets/CSS/modals_stylesheet.css
+++ b/Assets/CSS/modals_stylesheet.css
@@ -124,6 +124,7 @@ button {
     font-size: 0.5rem;
     font-weight: bold;
     width: 150px;
+    height: 7vmin;
     padding: 5px;
     border-radius: 5px;
     justify-self: center;
@@ -168,6 +169,10 @@ button {
 
 .error {
     font-weight: bold;
+    color: red;
+}
+
+.full {
     color: darkred;
 }
 
